# inertia-axum

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  mise.toml
crates/cargo-inertia/: Cargo.toml
crates/cargo-inertia/src/: check.rs  cli.rs  dev.rs  error.rs  framework.rs  init.rs  lib.rs  main.rs  output.rs  package_manager.rs  ssr.rs  sync.rs  templates.rs
crates/cargo-inertia/src/init/: args.rs  interactive.rs  plan.rs  render.rs  validate.rs  write.rs
crates/cargo-inertia/src/snapshots/: cargo_inertia__init__tests__react_completion_output.snap  cargo_inertia__init__tests__react_home_tsx.snap  cargo_inertia__init__tests__react_main_ts.snap  cargo_inertia__init__tests__react_package_json.snap  cargo_inertia__init__tests__react_vite_config_ts.snap  cargo_inertia__init__tests__svelte_completion_output.snap  cargo_inertia__init__tests__svelte_config_js.snap  cargo_inertia__init__tests__svelte_home_svelte.snap  cargo_inertia__init__tests__svelte_main_ts.snap  cargo_inertia__init__tests__svelte_package_json.snap  cargo_inertia__init__tests__svelte_tsconfig_json.snap  cargo_inertia__init__tests__svelte_vite_config_ts.snap  cargo_inertia__init__tests__vue_completion_output.snap  cargo_inertia__init__tests__vue_home_vue.snap  cargo_inertia__init__tests__vue_main_ts.snap  cargo_inertia__init__tests__vue_package_json.snap  cargo_inertia__init__tests__vue_vite_config_ts.snap
crates/cargo-inertia/src/sync/: args.rs
crates/cargo-inertia/src/templates/: catalog.rs  context.rs  versions.rs
crates/cargo-inertia/templates/react/: package.json.j2  tsconfig.json.j2  vite.config.ts.j2
crates/cargo-inertia/templates/react/src/: main.ts.j2
crates/cargo-inertia/templates/svelte/: package.json.j2  svelte.config.js.j2  tsconfig.json.j2  vite.config.ts.j2
crates/cargo-inertia/templates/svelte/src/: main.ts.j2
crates/cargo-inertia/templates/vue/: package.json.j2  tsconfig.json.j2  vite.config.ts.j2
crates/cargo-inertia/templates/vue/src/: main.ts.j2
crates/cargo-inertia/tests/fixtures/sync-library/: Cargo.toml
crates/inertia-axum/: Cargo.toml
crates/inertia-axum-macros/: Cargo.toml
crates/inertia-axum-macros/src/: attributes.rs  form.rs  lib.rs  page.rs  props.rs  typegen.rs
crates/inertia-axum-macros/tests/ui/fail/: empty_component.rs  generic_page_typegen.rs  generic_page_typegen.stderr  invalid_attribute.rs  invalid_typegen_path.rs  missing_component.rs  reserved_errors_prop.rs  shared_page.rs  shared_page.stderr  shared_skip.rs  unsupported_enum.rs
crates/inertia-axum-macros/tests/ui/pass/: page.rs  props.rs
crates/inertia-axum-test/: Cargo.toml
crates/inertia-axum-test/src/: lib.rs  page.rs  request.rs  response.rs
crates/inertia-axum/benches/: page_render.rs  request_context.rs  shared_props.rs  version_layer.rs
crates/inertia-axum/src/: app.rs  assets.rs  engine.rs  extract.rs  form.rs  layer.rs  lib.rs  prelude.rs  response.rs  root.rs  router.rs  ssr.rs
crates/inertia-axum/src/axum/: error.rs  render.rs  shared.rs
crates/inertia-axum/src/html/: mod.rs
crates/inertia-axum/src/root/: askama.rs  template.rs
crates/inertia-axum/src/ssr/: client.rs  config.rs  error.rs  health.rs  mod.rs  node.rs  policy.rs  runtime.rs
crates/inertia-axum/tests/: askama_root.rs  docs_quick_start.rs  root_templates.rs  ssr_config.rs  ssr_managed_node.rs  ssr_policy.rs  ssr_rendering.rs  transient_flash.rs  typed_pages.rs  typed_shared.rs  typegen_roots.rs
crates/inertia-core/: Cargo.toml
crates/inertia-core/src/: app.rs  assets.rs  engine.rs  form.rs  headers.rs  lib.rs  redirect.rs  response.rs  share.rs  typed.rs  visit.rs
crates/inertia-core/src/assets/: directory.rs
crates/inertia-core/src/html/: mod.rs  serializer.rs
crates/inertia-core/src/page/: builder.rs  draft.rs  metadata.rs  mod.rs  model.rs
crates/inertia-core/src/page/tests/: mod.rs  props.rs
crates/inertia-core/src/props/: eager.rs  lazy.rs  mod.rs  prop.rs  resolver.rs
crates/inertia-core/src/request/: header_list.rs  mod.rs  parts.rs  selection.rs
crates/inertia-core/src/root/: askama.rs  template.rs
crates/inertia-core/src/shared/: mod.rs
crates/inertia-core/src/ssr/: client.rs  error.rs  health.rs  mod.rs  node.rs  policy.rs  test_server.rs
crates/inertia-core/src/transient/: cookie.rs  memory.rs  mod.rs  tower_session.rs
crates/inertia-embed/: Cargo.toml
crates/inertia-embed/benches/: embedded.rs
crates/inertia-embed/macros/: Cargo.toml
crates/inertia-embed/macros/src/: build.rs  generate.rs
crates/inertia-embed/src/: frontend.rs  lib.rs  request.rs
crates/inertia-embed/tests/: runtime.rs
crates/inertia-macros/: Cargo.toml
crates/inertia-macros/src/: diagnostics.rs  form.rs  lib.rs  page.rs  props.rs  typegen.rs
crates/inertia-macros/tests/: dependency_arrangements.rs  trybuild.rs
crates/inertia-macros/tests/fixtures/axum-only/: Cargo.toml
crates/inertia-macros/tests/ui/fail/: empty_component.rs  (+25 more)
crates/inertia-rocket/: Cargo.toml
crates/inertia-rocket/src/: assets.rs  boundary.rs  fairing.rs  form.rs  guard.rs  lib.rs  response.rs
crates/inertia-rocket/tests/: integration.rs
crates/inertia-test/: Cargo.toml  LICENSE
crates/inertia-test/src/: adapter.rs  app.rs  lib.rs  page.rs  request.rs  response.rs  ssr.rs
crates/inertia-test/tests/: adapter_conformance.rs  ssr.rs  state.rs
crates/inertia-typegen/: Cargo.toml
docs/snippets/quick-start-server/: Cargo.toml
docs/snippets/quick-start-server/src/: main.rs
examples/axum-svelte/: Cargo.toml  README.md
examples/axum-svelte/src/: lib.rs  main.rs
examples/axum-svelte/svelte-app/: README.md  package-lock.json  package.json  playwright.config.js  pnpm-lock.yaml  vite.config.js
examples/axum-svelte/svelte-app/src/: global.css  main.js
examples/axum-svelte/svelte-app/tests/: production-ssr.spec.js
examples/axum-svelte/tests/: production_ssr.rs
examples/incident-board/: Cargo.toml  README.md
examples/incident-board/src/: lib.rs
examples/rocket-svelte/: Cargo.toml  README.md
examples/rocket-svelte/src/: main.rs
examples/todo/: Cargo.toml  README.md
examples/todo/src/: lib.rs
(+296 files in other folders)
