[package]
name = "inertia-axum"
version = "0.5.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"
homepage = "https://github.com/giddyos/inertia-axum"
repository = "https://github.com/giddyos/inertia-axum"
description = "Inertia.js adapter for Axum"
keywords = ["inertia", "web", "framework", "axum"]
categories = ["web-programming"]
readme = "README.md"

[workspace]
resolver = "2"
members = [
    "crates/inertia-axum-macros",
    "examples/axum-minimal",
    "examples/axum-svelte",
]
default-members = ["."]

[workspace.dependencies]
axum = { version = "0.8.9", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1"
tower = "0.5.3"

[dependencies]
axum = { workspace = true, features = ["json", "original-uri"] }
fluent-uri = "0.4.1"
futures-util = "0.3"
pin-project-lite = "0.2"
serde = { workspace = true, features = ["rc"] }
serde_json.workspace = true
tower-layer = "0.3"
tower-service = "0.3"
tracing = "0.1"
sha2 = "0.10"
tower-http = { version = "0.6", features = ["fs"] }
inertia-axum-macros = { path = "crates/inertia-axum-macros", version = "1.0.0-alpha.1", optional = true }
cookie = { version = "0.18", features = ["secure"], optional = true }
tower-sessions = { version = "0.14", optional = true }

[features]
default = ["macros"]
macros = ["dep:inertia-axum-macros"]
cookies = ["dep:cookie"]
tower-sessions = ["dep:tower-sessions"]

[dev-dependencies]
axum = { workspace = true, features = ["http1", "tokio"] }
criterion = "0.5"
insta = { version = "1.48.0", features = ["json"] }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
tower = { workspace = true, features = ["util"] }

[[bench]]
name = "request_context"
harness = false

[[bench]]
name = "page_render"
harness = false

[[bench]]
name = "shared_props"
harness = false

[[bench]]
name = "version_layer"
harness = false

[[bench]]
name = "pending_page_finalize"
harness = false

[[bench]]
name = "vite_initial_html"
harness = false

[[bench]]
name = "partial_async_prop_selection"
harness = false

[[bench]]
name = "selected_async_prop_concurrency"
harness = false

[[bench]]
name = "unselected_async_prop"
harness = false

[[bench]]
name = "transient_cookie_commit"
harness = false
required-features = ["cookies"]
