[workspace]
resolver = "3"
members = [
    "crates/inertia-axum",
    "crates/inertia-axum-macros",
    "crates/inertia-axum-test",
    "crates/cargo-inertia",
    "examples/axum-minimal",
    "examples/axum-svelte",
    "examples/todo",
    "examples/incident-board",
    "examples/observatory",
]
default-members = [
    "crates/inertia-axum",
    "crates/inertia-axum-macros",
    "crates/inertia-axum-test",
]

[workspace.package]
version = "1.0.0-alpha.1"
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/giddyos/inertia-axum"
homepage = "https://github.com/giddyos/inertia-axum"
authors = ["inertia-axum contributors"]

[workspace.dependencies]
axum = { version = "0.8.9", default-features = false }
bytes = "1"
cargo_metadata = "0.20"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http-body-util = "0.1"
hyper = { version = "1", default-features = false }
hyper-util = { version = "0.1", default-features = false }
tokio = "1"
tower = "0.5.3"
inertia-axum = { path = "crates/inertia-axum", version = "1.0.0-alpha.1" }
inertia-axum-macros = { path = "crates/inertia-axum-macros", version = "1.0.0-alpha.1" }
inertia-axum-test = { path = "crates/inertia-axum-test", version = "1.0.0-alpha.1" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
too_many_lines = "allow"
return_self_not_must_use = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
map_unwrap_or = "allow"
collapsible_if = "allow"
semicolon_if_nothing_returned = "allow"
format_push_string = "allow"
redundant_closure_for_method_calls = "allow"
unnecessary_map_or = "allow"
wildcard_imports = "allow"
trivially_copy_pass_by_ref = "allow"
needless_lifetimes = "allow"
elidable_lifetime_names = "allow"
items_after_statements = "allow"
ignored_unit_patterns = "allow"
match_same_arms = "allow"
default_trait_access = "allow"
similar_names = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
