[workspace]
resolver = "3"
members = [
    "crates/inertia-core",
    "crates/inertia-axum",
    "crates/inertia-macros",
    "crates/inertia-test",
    "crates/inertia-typegen",
    "crates/cargo-inertia",
    "crates/inertia-axum-typegen-spike",
    "examples/axum-minimal",
    "examples/axum-askama",
    "examples/axum-svelte",
    "examples/axum-react",
    "examples/axum-vue",
    "examples/todo",
    "examples/incident-board",
    "examples/observatory",
]
default-members = [
    "crates/inertia-core",
    "crates/inertia-axum",
    "crates/inertia-macros",
    "crates/inertia-test",
    "crates/inertia-typegen",
]

[workspace.package]
version = "1.0.0-alpha.1"
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/giddyos/inertia-axum"
homepage = "https://github.com/giddyos/inertia-axum"
authors = ["inertia-rs contributors"]

[workspace.dependencies]
askama = { version = "0.16", default-features = false, features = ["config", "derive", "std"] }
axum = { version = "0.8.9", default-features = false }
bytes = { version = "1", default-features = false }
http = { version = "1", default-features = false, features = ["std"] }
serde = { version = "1", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
http-body-util = { version = "0.1", default-features = false }
hyper = { version = "1", default-features = false }
hyper-util = { version = "0.1", default-features = false }
sha2 = { version = "0.11", default-features = false }
tokio = { version = "1", default-features = false }
tower = { version = "0.5.3", default-features = false }
inertia-core = { path = "crates/inertia-core", version = "1.0.0-alpha.1" }
inertia-axum = { path = "crates/inertia-axum", version = "1.0.0-alpha.1" }
inertia-macros = { path = "crates/inertia-macros", version = "1.0.0-alpha.1" }
inertia-test = { path = "crates/inertia-test", version = "1.0.0-alpha.1" }
inertia-typegen = { path = "crates/inertia-typegen", version = "1.0.0-alpha.1" }
ts-rs = { version = "=12.0.1", default-features = false, features = ["serde-compat"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
too_many_lines = "allow"
return_self_not_must_use = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
map_unwrap_or = "allow"
collapsible_if = "allow"
semicolon_if_nothing_returned = "allow"
format_push_string = "allow"
redundant_closure_for_method_calls = "allow"
unnecessary_map_or = "allow"
wildcard_imports = "allow"
trivially_copy_pass_by_ref = "allow"
needless_lifetimes = "allow"
elidable_lifetime_names = "allow"
items_after_statements = "allow"
ignored_unit_patterns = "allow"
match_same_arms = "allow"
default_trait_access = "allow"
similar_names = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
