[package]
name = "cargo-inertia"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Optional project tooling for inertia-axum"

[lints]
workspace = true

[[bin]]
name = "cargo-inertia"
path = "src/main.rs"

[dependencies]
cargo_metadata = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
insta = "1.48.0"
