[package]
name = "cargo-inertia"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Optional project tooling for inertia-axum"
include = ["Cargo.toml", "README.md", "src/**", "templates/**"]

[lints]
workspace = true

[[bin]]
name = "cargo-inertia"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["full"]
full = ["init", "interactive", "dev", "check", "sync"]
cli = ["dep:clap", "dep:thiserror"]
templates = ["dep:include_dir", "dep:minijinja", "dep:serde", "dep:serde_json"]
package-managers = ["dep:which"]
init = ["cli", "templates", "package-managers", "dep:tempfile"]
interactive = ["init", "dep:cliclack"]
dev = ["cli", "package-managers", "dep:command-group", "dep:ctrlc"]
check = ["cli", "dep:cargo_metadata", "dep:serde_json", "dep:syn"]
sync = ["cli", "dep:cargo_metadata", "dep:dprint-plugin-typescript", "dep:fs2", "dep:inertia-axum-typegen", "dep:proc-macro2", "dep:serde", "dep:serde_json", "dep:sha2", "dep:syn", "dep:tempfile"]

[dependencies]
cargo_metadata = { version = "0.23.1", optional = true }
clap = { version = "4.6.1", features = ["derive"], optional = true }
cliclack = { version = "0.5.5", optional = true }
command-group = { version = "5.0.1", optional = true }
ctrlc = { version = "3.5.2", features = ["termination"], optional = true }
dprint-plugin-typescript = { version = "0.95", optional = true }
fs2 = { version = "0.4.3", optional = true }
inertia-axum-typegen = { workspace = true, optional = true }
include_dir = { version = "0.7.4", optional = true }
minijinja = { version = "2.21.0", default-features = false, features = ["custom_syntax", "debug", "serde"], optional = true }
proc-macro2 = { version = "1", optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
sha2 = { version = "0.11", optional = true }
syn = { version = "2.0.118", default-features = false, features = ["full", "parsing", "visit"], optional = true }
tempfile = { version = "3.27.0", optional = true }
thiserror = { version = "2.0.18", optional = true }
which = { version = "8.0.4", optional = true }

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
insta = "1.48.0"
predicates = "3"
