[package]
name = "inertia-axum-macros"
version = "1.0.0-alpha.1"
edition = "2021"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/giddyos/inertia-axum"
description = "Procedural macros for inertia-axum"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
proc-macro-crate = "3"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }

[dev-dependencies]
ia = { package = "inertia-axum", path = "../..", default-features = false }
axum = "0.8.9"
serde = { version = "1", features = ["derive"] }
trybuild = "1"
