[package]
name = "inertia-axum-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Procedural macros for inertia-axum"

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
proc-macro-crate = "3"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }

[dev-dependencies]
ia = { package = "inertia-axum", path = "../inertia-axum", default-features = false }
axum = "0.8.9"
serde = { version = "1", features = ["derive"] }
trybuild = "1"
garde = { version = "0.23", features = ["derive"] }
validator = { version = "0.20", features = ["derive"] }
