[package]
name = "inertia-axum-test"
version = "1.0.0-alpha.1"
edition = "2021"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/giddyos/inertia-axum"
description = "In-process testing utilities for inertia-axum applications"

[dependencies]
axum = "0.8.9"
inertia-axum = { path = "../..", version = "1.0.0-alpha.1", features = ["test-support"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = { version = "0.5.3", features = ["util"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
