[package]
name = "inertia-axum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "An Inertia.js server adapter for Axum"
keywords = ["inertia", "web", "framework", "axum"]
categories = ["web-programming"]
readme = "../../README.md"

[lints]
workspace = true

[dependencies]
axum = { workspace = true, features = ["json", "original-uri"] }
bytes.workspace = true
fluent-uri = "0.4.1"
futures-util = "0.3"
pin-project-lite = "0.2"
serde = { workspace = true, features = ["rc"] }
serde_json.workspace = true
serde_urlencoded = "0.7"
tower-layer = "0.3"
tower-service = "0.3"
tracing = "0.1"
sha2 = { version = "0.10", optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }
base64 = { version = "0.22", optional = true }
inertia-axum-macros = { workspace = true, optional = true }
cookie = { version = "0.18", features = ["secure"], optional = true }
tower-sessions = { version = "0.14", optional = true }
http-body-util = { workspace = true, optional = true }
hyper = { workspace = true, features = ["client", "http1"], optional = true }
hyper-util = { workspace = true, features = ["client-legacy", "http1", "tokio"], optional = true }
tokio = { workspace = true, features = ["io-util", "macros", "process", "rt", "sync", "time"], optional = true }
tower = { workspace = true, features = ["limit", "load-shed", "timeout", "util"], optional = true }

[features]
default = ["macros", "vite"]
macros = ["dep:inertia-axum-macros"]
vite = ["dep:sha2", "dep:tower-http"]
cookies = ["dep:base64", "dep:cookie"]
tower-sessions = ["dep:tower-sessions"]
garde = []
validator = []
test-support = []
ssr = [
    "dep:http-body-util",
    "dep:hyper",
    "dep:hyper-util",
    "dep:tokio",
    "dep:tower",
]

[dev-dependencies]
axum = { workspace = true, features = ["http1", "tokio"] }
criterion = "0.5"
insta = { version = "1.48.0", features = ["json"] }
tokio = { workspace = true, features = ["macros", "net", "rt", "rt-multi-thread"] }
tower = { workspace = true, features = ["util"] }
garde = { version = "0.22", features = ["derive"] }
validator = { version = "0.20", features = ["derive"] }

[[bench]]
name = "request_context"
harness = false
[[bench]]
name = "page_render"
harness = false
[[bench]]
name = "shared_props"
harness = false
[[bench]]
name = "version_layer"
harness = false
[[bench]]
name = "pending_page_finalize"
harness = false
[[bench]]
name = "vite_initial_html"
harness = false
required-features = ["vite"]
[[bench]]
name = "partial_async_prop_selection"
harness = false
[[bench]]
name = "selected_async_prop_concurrency"
harness = false
[[bench]]
name = "unselected_async_prop"
harness = false
[[bench]]
name = "transient_cookie_commit"
harness = false
required-features = ["cookies"]
