[package]
name = "inertia-axum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Axum adapter for the Inertia.js Rust runtime"
keywords = ["inertia", "web", "framework", "axum"]
categories = ["web-programming"]
readme = "../../README.md"

[lints]
workspace = true

[dependencies]
axum = { workspace = true, features = ["json", "original-uri"] }
bytes.workspace = true
fluent-uri = "0.4.1"
http.workspace = true
inertia-core.workspace = true
pin-project-lite = "0.2"
serde = { workspace = true, features = ["rc"] }
serde_json.workspace = true
tower-layer = "0.3"
tower-service = "0.3"
tracing = "0.1"
tower-sessions = { version = "0.15", default-features = false, optional = true }

[features]
default = ["macros", "vite", "typegen"]
askama = ["inertia-core/askama"]
macros = ["inertia-core/macros"]
vite = ["inertia-core/vite", "inertia-core/filesystem-assets"]
cookies = ["inertia-core/cookies"]
tower-sessions = ["inertia-core/tower-sessions", "dep:tower-sessions"]
garde = ["inertia-core/garde"]
validator = ["inertia-core/validator"]
test-support = ["inertia-core/test-support"]
typegen = ["inertia-core/typegen"]
typegen-serde-json = ["inertia-core/typegen-serde-json"]
typegen-uuid = ["inertia-core/typegen-uuid"]
typegen-chrono = ["inertia-core/typegen-chrono"]
typegen-jiff = ["inertia-core/typegen-jiff"]
typegen-url = ["inertia-core/typegen-url"]
typegen-bytes = ["inertia-core/typegen-bytes"]
typegen-indexmap = ["inertia-core/typegen-indexmap"]
typegen-semver = ["inertia-core/typegen-semver"]
typegen-bigdecimal = ["inertia-core/typegen-bigdecimal"]
typegen-smol-str = ["inertia-core/typegen-smol-str"]
typegen-tokio = ["inertia-core/typegen-tokio"]
ssr = ["inertia-core/ssr"]

[dev-dependencies]
axum = { workspace = true, features = ["http1", "tokio"] }
criterion = "0.8"
insta = { version = "1.48.0", features = ["json"] }
tokio = { workspace = true, features = ["macros", "net", "rt", "rt-multi-thread"] }
tower = { workspace = true, features = ["util"] }
garde = { version = "0.23", features = ["derive"] }
validator = { version = "0.20", features = ["derive"] }

[[bench]]
name = "request_context"
harness = false
[[bench]]
name = "page_render"
harness = false
[[bench]]
name = "shared_props"
harness = false
[[bench]]
name = "version_layer"
harness = false
[[bench]]
name = "pending_page_finalize"
harness = false
[[bench]]
name = "vite_initial_html"
harness = false
required-features = ["vite"]
[[bench]]
name = "partial_async_prop_selection"
harness = false
[[bench]]
name = "selected_async_prop_concurrency"
harness = false
[[bench]]
name = "unselected_async_prop"
harness = false
[[bench]]
name = "transient_cookie_commit"
harness = false
required-features = ["cookies"]
