[package]
name = "inertia-embed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Compile-time embedded frontend assets for Inertia Rust applications"
keywords = ["inertia", "assets", "embed", "vite"]
categories = ["web-programming"]
readme = "../../README.md"

[lints]
workspace = true

[dependencies]
brotli-decompressor.workspace = true
bytes.workspace = true
http.workspace = true
inertia-core.workspace = true
inertia-embed-macros = { path = "macros", version = "1.0.0-alpha.1" }
mime_guess.workspace = true
sha2.workspace = true

[dev-dependencies]
axum = { workspace = true, features = ["http1", "tokio"] }
criterion = "0.8"
inertia-axum.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true, features = ["util"] }
trybuild = "1"

[[bench]]
name = "embedded"
harness = false
