[package]
name = "inertia-test"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Shared conformance and testing utilities for Inertia Rust adapters"

[lints]
workspace = true

[dependencies]
actix-web.workspace = true
async-trait = "0.1"
axum = { workspace = true, features = ["http1", "tokio"] }
bytes.workspace = true
futures-util = "0.3"
http.workspace = true
inertia-actix = { workspace = true, features = ["test-support", "ssr"] }
inertia-axum = { workspace = true, features = ["test-support", "ssr"] }
inertia-embed.workspace = true
inertia-rocket = { workspace = true, features = ["test-support", "ssr"] }
rocket.workspace = true
serde.workspace = true
serde_json.workspace = true
tower = { workspace = true, features = ["util"] }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
