[package]
name = "axum-svelte"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
axum = { workspace = true, features = ["http1", "tokio"] }
inertia-axum = { path = "../.." }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread"] }
