[package]
name = "axum-svelte"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { workspace = true, features = ["http1", "tokio"] }
inertia-axum = { workspace = true }
serde.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "sync"] }
