[package]
name = "inertia-axum-example-incident-board"
version = "1.0.0-alpha.1"
edition = "2021"
rust-version = "1.88"
publish = false

[dependencies]
axum = { workspace = true }
inertia-axum = { workspace = true, features = ["macros"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
inertia-test = { path = "../../crates/inertia-test" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
