[package]
name = "rocket-svelte"
version = "0.1.0"
edition = "2021"
workspace = "../"
publish = false

[dependencies]
axum-inertia-rs = { path = "../..", features = ["rocket"] }
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["handlebars"]
