[package]
name = "inertia-axum-example-todo"
version = "1.0.0-alpha.1"
edition = "2021"
rust-version = "1.88"
publish = false

[dependencies]
axum = { workspace = true }
inertia-axum = { path = "../..", features = ["macros"] }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
inertia-axum-test = { path = "../../crates/inertia-axum-test" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
