[package]
name = "inertia-axum-docs-quick-start"
version = "0.0.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
axum = { version = "0.8.9", features = ["http1", "tokio"] }
inertia-axum = "=1.0.0-alpha.1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "time"] }
